@@ -123,6 +123,14 @@ const run = async (): Promise<void> => {
   {
     const outDir = mkTmp();
     const input = path.join(process.cwd(), "tests", "fixtures", "intake", "tampered_manifest", "tampered.zip");
+    const res = await runCliCapture(["safe-run", input, "--out", outDir, "--adapter"]);
+    assertEq(res.status, 40, "safe-run should fail closed for missing --adapter value");
+    assert(res.stderr.includes("INPUT_INVALID"), "expected INPUT_INVALID on stderr for missing --adapter value");
+  }
+
+  {
+    const outDir = mkTmp();
+    const input = path.join(process.cwd(), "tests", "fixtures", "intake", "tampered_manifest", "tampered.zip");
     const res = await runCliCapture(["safe-run", input, "unexpected_extra_arg", "--out", outDir, "--adapter", "archive"]);
     assertEq(res.status, 40, "safe-run should fail closed for unexpected positional arguments");
     assert(res.stderr.includes("INPUT_INVALID"), "expected INPUT_INVALID on stderr for positional-arg misuse");
